--- a/main/index.html
+++ b/main/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/output.css" />
+    <link rel="stylesheet" href="/src/progress.css" />
     <title>Toast Notification App</title>
   </head>
-  <body class="bg-[#f7edff]">
+  <body class="bg-gradient-to-r from-[#40c9ff] to-[#e81cff] min-h-screen">
     <div class="m-[50px]">
       <button
         onclick="showToast(event)"
